# in-delivery-text-generator

./: Dockerfile  Dockerfile.GPU  compose.GPU.yaml  compose.yaml  downloader.py  llama.py  main.ipynb  main.py  pyproject.toml  rabbit.py  requirements.txt  router.py  schemas.py  tasks.md
llama/: __init__.py  generator.py
